# obsidian-mcp-server

./: .gitignore  Cargo.toml  README.md  TESTING.md  test_initialize.json  test_mcp.bat  test_mcp.ps1  test_mcp.sh  test_sequence.txt
.docs/ideas/: 001_プロジェクトの概要.md
.docs/plan/: 001-01_mcp_server_foundation_implementation.md  001-02_mcp_protocol_implementation.md  001-03_vault_operations_implementation.md  001-04_copilot_integration_implementation.md  001-05_final_integration_and_packaging.md
.docs/plans/: 001-01-basic-mcp-server.md  001-01-project-setup.md  001-02-obsidian-tools.md  001-02-vault-operations.md  001-03-deploy-setup.md  001-03-read-template.md
.docs/reports/: 001-01-project-setup_report.md  001-basic-mcp-server_report.md  002-code-quality-improvement_report.md  003-vault-operations_report.md  2025-07-28_001-01_mcp_server_foundation_implementation_report.md
.docs/scraps/: 001-clap-dependency-discussion.md  002-lib-rs-necessity-discussion.md  003-test-script.md
.docs/specs/: design.md  mcp-server-core.md  project.md  requirements.md
.github/instructions/: general.instructions.md
.github/prompts/agent/: scrap.prompt.md
.github/prompts/vibe/: create_plan_from_spec.prompt.md  (+5 more)
examples/: debug_config.rs
src/: config.rs  error.rs  lib.rs  main.rs
src/config/: logging.rs  mod.rs  settings.rs
src/error/: mod.rs
src/mcp/: mod.rs  protocol.rs  server.rs  types.rs
src/tools/: mod.rs  registry.rs
src/vault/: mod.rs  operations.rs
test-scripts/: test_mcp.bat  test_mcp.ps1  test_mcp.sh  test_save_markdown.json  test_sequence.txt
(+2 files in other folders)
