[package]
name = "obsidian-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
